--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -30,6 +30,7 @@
     "react-countdown": "^2.3.2",
     "react-crypto-chart": "^0.0.6",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.0",
     "react-table": "^7.7.0",
